# ragtail

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  oxyde_config.py  oxytail.db  package-lock.json  package.json  pyproject.toml  tailwind.config.js
docs/: admin.md  demo.md  fastapi.md  images.md  installation.md  integration.md  integrations.md  menus.md  models.md  routing.md  streamfield.md
examples/demo/: README.md  admin_setup.py  main.py  oxyde_config.py  oxytail.db  pages.py  pyproject.toml  ragtail.db  renderer.py  seed.py  site_setup.py  stream_blocks.py  views.py
examples/demo/site_templates/: content_page.px  layout.px  page.px
examples/demo/static/: site-nav.js  site.css
migrations/: 0001_initial.py
scripts/: check_richtext_toolbar.py  editors-shared.mjs  richtext-src.mjs  streamfield-src.mjs
src/oxytail/: __init__.py  admin.py  auth.py  cms.py  createsuperuser.py  db.py  fastapi.py  initdb.py  menus.py  models.py  page_types.py  pages.py  richtext.py  routing.py
src/oxytail/templates/: __init__.py  base.py  jinja2.py  pyjsx.py  registry.py
src/oxytail/wagtail_admin/: __init__.py  classes.py  registry.py  router.py  services.py
src/oxytail/wagtail_admin/components/: dashboard.px  icons.py  layout.px  locale_switcher.px  locales.px  login.px  menus.px  pages.px  password_reset.px  richtext.px  users.px
src/oxytail/wagtail_admin/static/: richtext.js  wagtail-admin.css
src/ragtail/: __init__.py  admin.py  auth.py  cli_args.py  cms.py  createsuperuser.py  db.py  fastapi.py  initdb.py  menus.py  migration_tools.py  models.py  models.pyi  page_types.py  pages.py  routing.py  seed.py  seeddb.py  seo.py  sites.py
src/ragtail/images/: __init__.py  config.py  fields.py  filters.py  focal_point.py  models.py  renditions.py  serving.py  storage.py  templates.py  upload.py
src/ragtail/migrations/: 0001_ragtail_initial.py  0002_page_data.py  0003_sites.py  0004_images.py
src/ragtail/ragtail_admin/: classes.py  deps.py  images_router.py  registry.py  render.py  router.py  services.py
src/ragtail/ragtail_admin/components/: dashboard.px  icons.py  images.px  layout.px  locales.px  login.px  menus.px  pages.px  password_reset.px  richtext.px  sites.px  streamfield.px  users.px
src/ragtail/ragtail_admin/static/: admin-nav.js  focal-point.css  focal-point.js  image-chooser.js  image-field.js  ragtail-admin.css  richtext.js  streamfield.js
src/ragtail/streamfield/: __init__.py  blocks.py  fields.py  render.py  value.py
src/ragtail/templates/: __init__.py  base.py  jinja2.py  pyjsx.py  views.py
src/ragtail/wagtail_admin/: __init__.py  registry.py  router.py  services.py
src/ragtail/wagtail_admin/components/: dashboard.px  layout.px  locales.px  login.px  menus.px  pages.px  password_reset.px  richtext.px  users.px
styles/: admin.css  site.css
tests/: conftest.py  test_admin.py  test_admin_assets.py  test_admin_locales_menus.py  test_admin_users.py  test_config.py  test_createsuperuser.py  test_db_prepare.py  test_demo_richtext.py  test_ensure_tables.py  test_fastapi_cms.py  test_home_about_public_urls.py  test_images.py  test_menus.py  test_oxyde_integration.py  test_page_paths.py  test_richtext.py  test_routing.py  test_routing_fallback.py  test_site_routing.py  test_streamfield.py  test_template_engines.py  test_translation_alternates.py
