[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oxytail"
version = "0.1.0"
description = "A tiny Wagtail-inspired CMS MVP built on Oxyde ORM."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Oxytail Contributors" }
]
dependencies = [
  "fastapi>=0.115",
  "itsdangerous>=2.1",
  "oxyde>=0.7.1",
  "bcrypt>=4.0",
  "python-jsx>=0.4.0",
  "python-multipart>=0.0.9",
  "markdown-it-py>=3.0",
  "bleach>=6.0",
]

[project.optional-dependencies]
admin = [
  "oxyde-admin>=0.4.0",
]
demo = [
  "uvicorn[standard]>=0.30",
]

[project.scripts]
oxytail-createsuperuser = "oxytail.createsuperuser:main"
oxytail-initdb = "oxytail.initdb:main"

[dependency-groups]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/oxytail"]

[tool.hatch.build.targets.wheel.force-include]
"src/oxytail/wagtail_admin/static" = "oxytail/wagtail_admin/static"
"src/oxytail/wagtail_admin/components" = "oxytail/wagtail_admin/components"
"migrations" = "oxytail/db_migrations"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
