[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragtail"
version = "0.2.0"
description = "A tiny Wagtail-inspired CMS MVP built on Oxyde ORM."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Ragtail Contributors" }
]
dependencies = [
  "fastapi>=0.115",
  "itsdangerous>=2.1",
  "oxyde>=0.7.1",
  "bcrypt>=4.0",
  "python-jsx>=0.4.0",
  "python-multipart>=0.0.9",
  "markdown-it-py>=3.0",
  "bleach>=6.0",
  "pillow>=10.0",
]

[project.optional-dependencies]
admin = [
  "oxyde-admin>=0.4.0",
]
jinja = [
  "jinja2>=3.1",
]

[project.scripts]
ragtail-createsuperuser = "ragtail.createsuperuser:main"
ragtail-initdb = "ragtail.initdb:main"
ragtail-seeddb = "ragtail.seeddb:main"
ragtail-makemigrations = "ragtail.migration_tools:makemigrations_main"
ragtail-showmigrations = "ragtail.migration_tools:showmigrations_main"

[dependency-groups]
dev = [
  "httpx>=0.27",
  "jinja2>=3.1",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/ragtail"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
